# wormhole-circle-integration

./: DESIGN.md  README.md  SECURITY.md
.github/: build.yaml  main.yml
.github/workflows/: ci.yml  main.yml
evm/: .gas-snapshot-current  .gitignore  .prettierrc.json  Makefile  README.md  foundry-test.toml  foundry.toml  package-lock.json  package.json  testing.env  tsconfig.json
evm/env/: avax-fuji-testnet.env  avax-testnet.env  eth-goerli-testnet.env  eth-testnet.env  testing.env
evm/env/mainnet/: arbitrum-mainnet.env  arbitrum.env  avalanche.env  base.env  eth.env  optimism-mainnet.env  optimism.env  polygon.env
evm/env/testnet/: arbitrum-sepolia.env  arbitrum-testnet.env  arbitrum.env  avax-testnet.env  avax.env  base-sepolia.env  base.env  eth-sepolia.env  eth-testnet.env  eth.env  optimism-sepolia.env  optimism-testnet.env  optimism.env  polygon.env
evm/forge-scripts/: deploy_contracts.sol  deploy_implementation_only.sol  deploy_mock_contracts.sol  read_governance_variables.sol  submit_testnet_registration.sol  test_outbound_transfer.sol
evm/forge-test/: CircleIntegration.t.sol  CrossChainUSDC.t.sol
evm/forge/scripts/: deploy_contracts.sol  deploy_implementation_only.sol  deploy_mock_contracts.sol  read_governance_variables.sol  submit_testnet_registration.sol
evm/forge/tests/: CircleIntegration.t.sol  ForkSlots.t.sol  Governance.t.sol  InheritingWormholeCctp.t.sol  WormholeCctpMessages.t.sol
evm/modules/src/: CircleIntegrationSimulator.sol  WormholeSimulator.sol
evm/sh/: deploy_contracts.sh  deploy_implementation_only.sh  submit_testnet_registration.sh  verify_implementation.sh  verify_proxy.sh  verify_setup.sh
evm/shell-scripts/: deploy_circle_integration.sh  deploy_contracts.sh  deploy_implementation_only.sh  deploy_usdc_shuttle.sh  make_ethers_types.sh  run_integration_tests.sh  submit_testnet_registration.sh  test_transfer.sh  upgrade_proxy.sh  verify_implementation.sh  verify_proxy.sh  verify_setup.sh
evm/src/circle_integration/: CircleIntegration.sol  CircleIntegrationGetters.sol  CircleIntegrationGovernance.sol  CircleIntegrationImplementation.sol  CircleIntegrationMessages.sol  CircleIntegrationProxy.sol  (+4 more)
evm/ts/src/: logs.ts  (+3 more)
solana/: .gitignore  .prettierrc.json  Anchor.toml  Cargo.toml  Makefile  package-lock.json  package.json  tsconfig.json
solana/modules/wormhole-cctp/: Cargo.toml
solana/modules/wormhole-cctp/src/: error.rs  lib.rs
solana/modules/wormhole-cctp/src/cctp/: mod.rs
solana/modules/wormhole-cctp/src/cctp/message_transmitter_program/: mod.rs
solana/modules/wormhole-cctp/src/cctp/message_transmitter_program/cpi/: mod.rs
solana/modules/wormhole-cctp/src/cctp/message_transmitter_program/cpi/receive_message/: mod.rs  token_messenger_minter.rs
solana/modules/wormhole-cctp/src/cctp/message_transmitter_program/state/: message_transmitter_config.rs  mod.rs
solana/modules/wormhole-cctp/src/cctp/token_messenger_minter_program/: mod.rs
solana/modules/wormhole-cctp/src/cctp/token_messenger_minter_program/cpi/: deposit_for_burn_with_caller.rs  mod.rs
solana/modules/wormhole-cctp/src/cctp/token_messenger_minter_program/state/: local_token.rs  mod.rs  remote_token_messenger.rs  token_pair.rs
solana/modules/wormhole-cctp/src/cpi/: burn_and_publish.rs  mod.rs  verify_vaa_and_mint.rs
solana/modules/wormhole-cctp/src/messages/: deposit.rs  mod.rs
solana/modules/wormhole-cctp/src/utils/: accounts.rs  mod.rs
solana/modules/wormhole-cctp/src/utils/zero_copy/: cctp.rs  mod.rs
solana/modules/wormhole-cctp/src/wormhole/: mod.rs
solana/modules/wormhole-cctp/src/wormhole/core_bridge_program/: mod.rs
solana/modules/wormhole-cctp/src/wormhole/core_bridge_program/cpi/: mod.rs  post_message.rs
solana/modules/wormhole-cctp/src/wormhole/core_bridge_program/state/: config.rs
solana/modules/wormhole-cctp/src/wormhole/core_bridge_program/vaa/: mod.rs
solana/modules/wormhole-cctp/src/wormhole/core_bridge_program/vaa/zero_copy/: mod.rs  posted_vaa_v1.rs
solana/programs/circle-integration/: Cargo.toml
solana/programs/circle-integration/src/: constants.rs  error.rs  lib.rs
solana/programs/circle-integration/src/processor/: initialize.rs  mod.rs  redeem_tokens_with_payload.rs  transfer_tokens_with_payload.rs
solana/programs/circle-integration/src/processor/governance/: mod.rs  register_emitter_and_domain.rs  upgrade_contract.rs
solana/programs/circle-integration/src/state/: consumed_vaa.rs  custodian.rs  mod.rs  registered_emitter.rs
solana/sh/: run_anchor_test.sh
solana/ts/scripts/: pruneIdlTypes.ts  setupTestnet.ts  tsconfig.json  upgradeTestnet.ts
solana/ts/src/: consts.ts  index.ts  messages.ts
solana/ts/src/cctp/: index.ts  messages.ts
solana/ts/src/cctp/messageTransmitter/: MessageSent.ts  MessageTransmitterConfig.ts  UsedNonces.ts  index.ts
solana/ts/src/cctp/tokenMessengerMinter/: RemoteTokenMessenger.ts  index.ts
solana/ts/src/cctp/types/: message_transmitter.ts  token_messenger_minter.ts
solana/ts/src/circle/: index.ts
solana/ts/src/circle/idl/: message_transmitter.json  token_messenger_minter.json
solana/ts/src/circle/messageTransmitter/: MessageTransmitterConfig.ts  index.ts
solana/ts/src/circle/tokenMessengerMinter/: index.ts
solana/ts/src/circle/types/: message_transmitter.ts  token_messenger_minter.ts
solana/ts/src/state/: ConsumedVaa.ts  Custodian.ts  RegisteredEmitter.ts  index.ts
solana/ts/src/wormhole/: index.ts
solana/ts/tests/: 01__circleIntegration.ts  10__testnetFork.ts
solana/ts/tests/accounts/: usdc_mint.json  usdc_payer_token.json
solana/ts/tests/accounts/core_bridge_mainnet/: config.json  guardian_set_0.json
solana/ts/tests/accounts/core_bridge_testnet/: guardian_set_0.json
solana/ts/tests/accounts/message_transmitter/: message_transmitter_config.json
solana/ts/tests/accounts/token_messenger_minter/: ethereum_remote_token_messenger.json  misconfigured_remote_token_messenger.json  token_messenger.json  token_minter.json  usdc_custody_token.json  usdc_local_token.json  usdc_token_pair.json
solana/ts/tests/helpers/: consts.ts  index.ts  mock.ts  utils.ts
(+57 files in other folders)
