[workspace]
members = [
    "modules/wormhole-cctp",
    "programs/circle-integration",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.3.0-alpha.0"
authors = ["Wormhole Contributors"]
license = "Apache-2.0"
homepage = "https://wormhole.com"
repository = "https://github.com/wormhole-foundation/wormhole-circle-integration"

[workspace.dependencies.wormhole-cctp-solana]
path = "modules/wormhole-cctp"

[workspace.dependencies.wormhole-raw-vaas]
version = "0.3.0-alpha.0"

[workspace.dependencies.wormhole-solana-vaas]
version = "0.3.0-alpha.0"
features = ["anchor"]

[workspace.dependencies.anchor-lang]
version = ">=0.29.0"
features = ["derive", "init-if-needed"]

[workspace.dependencies]
wormhole-solana-consts = "0.3.0-alpha.0"
wormhole-solana-utils = "0.3.0-alpha.0"
wormhole-io = "0.3.0-alpha.0"
anchor-spl = ">=0.29.0"
solana-program = "1.17.20"
hex = "0.4.3"
ruint = "1.9.0"
cfg-if = "1.0"
hex-literal = "0.4.1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1