[package]
name = "wormhole-cctp-solana"
description = "Wormhole CCTP Utilities for Solana"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["cpi"]
client = []
cpi = ["dep:anchor-spl", "dep:solana-program"]
mainnet = []
testnet = []

[dependencies]
wormhole-io.workspace = true
wormhole-raw-vaas.workspace = true

anchor-lang.workspace = true
anchor-spl = { optional = true, workspace = true }
solana-program = { optional = true, workspace = true }

hex.workspace = true
ruint.workspace = true

cfg-if.workspace = true

[dev-dependencies]
hex-literal.workspace = true